<resources>
    <string name="app_name">Wellness4Everyone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="year_of_participation">year of participation</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="toggle_to_signup">Toggle to Signup</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">home</string>
    <string name="user_home">HOME</string>
    <string name="user_stats">STATS</string>
    <string name="add_activity">Add Activity</string>
    <string name="view_stats">View Stats</string>
    <string name="view_activities">View Activites</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="activity_select_prompt">Select Activity:</string>
    <string name="enter_details">Enter Details:</string>
    <string name="select_date">Select Date:</string>
    <string name="enter_distance">Enter Distance:</string>
    <string name="enter_description">Enter Description:</string>
    <string name="save">Save</string>
    <string name="view_statsprompt">Select an activity to view its stats:</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="duration">Duration</string>
    <string name="steps">Steps</string>
    <string name="m4w_header">MOVE4WELLNESS CHALLENGE</string>
    <string name="qotd_title">QUOTE OF THE DAY</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="nodatamsg_manager">No data to show here.</string>
    <string name="nodatamsg">No data to show here. Add more activities to view!</string>

</resources>