<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/primarycolor">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="343dp"
        android:layout_height="269dp"
        android:src="@drawable/heart2_transparent_sharpened"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/Signupswitch"
        android:layout_width="160dp"
        android:layout_height="69dp"
        android:text="@string/toggle_to_signup"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="280dp"
        android:onClick="signuptoggle"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signupswitch"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="333dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="439dp" />

    <EditText
        android:id="@+id/Yearjoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/year_of_participation"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/Password"
        app:layout_constraintStart_toStartOf="@id/Password"
        app:layout_constraintTop_toBottomOf="@id/Password" />

    <Button
        android:id="@+id/LSButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="551dp"
        app:layout_constraintEnd_toEndOf="@id/Yearjoin"
        app:layout_constraintStart_toStartOf="@id/Yearjoin"
        app:layout_constraintTop_toBottomOf="@id/Yearjoin"
        android:onClick="loginsignup"
        android:backgroundTint="@color/Secondarycolor"
        android:textColor="@color/primarycolor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>


