<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:orientation="vertical"

    >

    <RelativeLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/primarycolor"
        >
        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backarrow"
            android:onClick="goback"/>
        <TextView
            android:id="@+id/text_userhome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:text="Choose A User"
            android:textAlignment="center"
            android:textColor="@color/Secondarycolor"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_spinprompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerBar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roundedcorner_stats">

        <TextView
            android:id="@+id/text_spinprompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="22sp"
            android:text="@string/view_statsprompt" />
        <Spinner
            android:id="@+id/spinner_viewstats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/text_spinprompt"
            android:gravity="center"
            android:entries="@array/activity_options" />

    </RelativeLayout>


    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_spinprompt"
        android:layout_above="@id/text_averages"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/roundedcorner_chart"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_averages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/toggleView"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="22sp"
        android:background="@drawable/roundedcorner_chart"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/toggleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/navBar"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone">

        <Switch
            android:id="@+id/switch_wkMth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:textOff="@string/weekly"
            android:textOn="@string/monthly"
            android:showText="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switch_durSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/steps"
            android:textOn="@string/duration"
            android:showText="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp"
        >
    </LinearLayout>



</RelativeLayout>